# squads-v4-client-v3

./: Cargo.toml  README.md
examples/: complete_multisig_flow.rs  create_multisig.rs  create_pending_tx.rs  debug_multisig_deser.rs  diagnose_pending.rs  end_to_end_multisig.rs  examine_raw_account.rs  fetch_pending.rs  mainnet_integration.rs  pda_derivation.rs  setup_hardware_test.rs
src/: accounts.rs  client.rs  error.rs  instructions.rs  lib.rs  message.rs  pda.rs  types.rs
