[package]
name = "squads-v4-client-v3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modern Rust client library for interacting with Squads v4 multisig protocol on Solana"
homepage = "https://squads.so"
repository = "https://github.com/hogyzen12/squads-v4-client-v3"
keywords = ["solana", "multisig", "squads", "blockchain"]

[dependencies]
# Solana 3.x dependencies
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-program = "3.0.0"
solana-commitment-config = "3.0.0"
solana-sdk-ids = "3.0.0"

# Serialization (updated to match unruggable-app)
borsh = "1.5.7"
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "2.0"

# Async runtime
tokio = { version = "1.41", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]

[lib]
name = "squads_v4_client_v3"

[dev-dependencies]
tokio = { version = "1.41", features = ["full", "test-util", "macros", "rt-multi-thread"] }
serde_json = "1.0"
